[package]
name = "sys-status-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1.21.1",  features = ["full"]   }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "3.2.22", features = ["derive"] }
chrono = "0.4.22"
execute = "0.2.11"
