[package]
name = "sys-status-srv"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
tokio = { version = "1.21.1",  features = ["full"]   }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "3.2.22", features = ["derive"] }
chrono = "0.4.22"
execute = "0.2.11"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1.6.0"
lazy_static = "1.4.0"
base64 = "0.13.0"
